listing and filtering allocations
