# service/src/main/java/br/com/sw2you/realmeet/domain/entity/Allocation.java
@@ -1,16 +1,19 @@
 package br.com.sw2you.realmeet.domain.entity;
 
-import static br.com.sw2you.realmeet.domain.repository.util.DateUtils.now;
+import static br.com.sw2you.realmeet.util.DateUtils.now;
 import static java.util.Objects.*;
 
 import br.com.sw2you.realmeet.domain.model.Employee;
 import java.time.OffsetDateTime;
+import java.util.List;
 import java.util.Objects;
 import javax.persistence.*;
 
 @Entity
 @Table(name = "allocation")
 public class Allocation {
+    public static final List<String> SORTABLE_FIELDS = List.of("startAt", "endAt");
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
